--- a/cards.asciidoc
+++ b/cards.asciidoc
@@ -156,59 +156,56 @@ https://github.com/mbezrukov/alfa-p2p/blob/master/cards-json-schema[JSON schema]
 [[resources-cards-get]]
 === Метод GET /cards
 
-
 ===== Параметры заголовков запросов
 |===
-| Параметр | Обязательность | По умолчанию | Описание | Тип
+| Параметр | Тип | Описание 
 
 | customerId
-| Mandatory
-| ---
-| Мнемоника пользователя и мнемоника местоположения
 | String
+| *Mandatory* +
+Мнемоника пользователя и мнемоника местоположения
 
 | applicationId
-| Mandatory
-| ---
-| ID приложения
 | String
+| *Mandatory* + 
+ID приложения
 
 | mode
-| Mandatory
-| ---
-| Режим работы ("all" - карты приложения + карты Альфа-Банка)
 | String
+| *Mandatory* +
+Режим работы ("all" - карты приложения + карты Альфа-Банка)
 
 |===
 
 
 ===== Параметры строки запроса
 |===
-| Параметр | Обязательность | По умолчанию | Описание | Тип
+| Параметр | Тип | Описание 
 
 | verificationMethod
-| Optional
-| "3DSecure"
-| Статус верификации карты ("3DSecure", "hold", "notverify")
 | String
+| *Optional* +
+Статус верификации карты ("3DSecure", "hold", "notverify") +
+По умолчанию: "3DSecure" +
 
 | deleted
-| Optional
-| false
-| Включать карты, удаленные пользователем? (true/false)
 | Boolean
+| *Optional* +
+Включать карты, удаленные пользователем? (true/false) +
+По умолчанию: false
 
 | blocked
-| Optional
-| false
-| Включать заблокированные карты? (true/false)
 | Boolean
+| *Optional* +
+Включать заблокированные карты? (true/false) +
+По умолчанию: false
+
 
 | active
-| Optional
-| false
-| Включать неактивные и просроченные карты? (true/false)
 | Boolean
+| *Optional* +
+Включать неактивные и просроченные карты? (true/false) +
+По умолчанию: false
 
 |===
 
