--- a/test.asciidoc
+++ b/test.asciidoc
@@ -1,9 +1,22 @@
-===== Параметры строки запроса
-[frame="none"]
-|===
-| Параметр | Описание
 
->| cardId
-<| *Mandatory
+===== Параметры заголовков запросов
+|===
+| Параметр | Тип | Описание 
+
+| customerId
+| String
+| 
+* Mandatory +
+* Мнемоника пользователя и мнемоника местоположения
+
+| applicationId
+| String
+| Mandatory + 
+ID приложения
+
+| mode
+| String
+| Mandatory +
+Режим работы ("all" - карты приложения + карты Альфа-Банка)
 
 |===
