--- a/cards.asciidoc
+++ b/cards.asciidoc
@@ -164,54 +164,59 @@ https://github.com/mbezrukov/alfa-p2p/blob/master/cards-json-schema[JSON schema]
 
 ===== Параметры заголовков запросов
 |===
-| Параметр | Тип | Описание 
+| Параметр | Тип | Обязательность | По умолчанию | Описание 
 
 | customerId
 | String
-| Mandatory +
-Мнемоника пользователя и мнемоника местоположения
+| Mandatory
+| ---
+| Мнемоника пользователя и мнемоника местоположения
 
 | applicationId
 | String
-| Mandatory + 
-ID приложения
+| Mandatory
+| ---
+| ID приложения
 
 | mode
 | String
-| Mandatory +
-Режим работы ("all" - карты приложения + карты Альфа-Банка)
+| Mandatory
+| ---
+| Режим работы ("all" - карты приложения + карты Альфа-Банка)
 
 |===
 
 
 ===== Параметры строки запроса
 |===
-| Параметр | Тип | Описание 
+| Параметр | Тип | Обязательность | По умолчанию | Описание 
 
 | verificationMethod
 | String
-| Optional +
-Статус верификации карты ("3DSecure", "hold", "notverify") +
-По умолчанию: "3DSecure" +
+| Optional
+| "3DSecure"
+| Статус верификации карты ("3DSecure", "hold", "notverify") +
+
 
 | deleted
 | Boolean
-| Optional +
-Включать карты, удаленные пользователем? (true/false) +
-По умолчанию: false
+| Optional
+| false
+| Включать карты, удаленные пользователем? (true/false) +
+
 
 | blocked
 | Boolean
-| Optional +
-Включать заблокированные карты? (true/false) +
-По умолчанию: false
+| Optional
+| false
+| Включать заблокированные карты? (true/false) +
 
 
 | active
 | Boolean
-| Optional +
-Включать неактивные и просроченные карты? (true/false) +
-По умолчанию: false
+| Optional
+| false
+| Включать неактивные и просроченные карты? (true/false)
 
 |===
 
@@ -389,31 +394,33 @@ HTTP/1.1 200 OK
 
 ===== Параметры заголовков запросов
 |===
-| Параметр | Тип | Описание 
+| Параметр | Тип | Обязательность | По умолчанию | Описание 
 
 | customerId
 | String
-| Mandatory +
-Мнемоника пользователя и мнемоника местоположения
+| Mandatory
+| ---
+| Мнемоника пользователя и мнемоника местоположения
 
 
 | applicationId
 | String
-| Mandatory +
-ID приложения
+| Mandatory
+| ---
+| ID приложения
 
 |===
 
 
 ===== Параметры строки запроса
 |===
-| Параметр | Тип | Описание 
+| Параметр | Тип | Обязательность | По умолчанию | Описание 
 
 | Id
 | String
-| Mandatory +
-ID карты
-
+| Mandatory
+| ---
+| ID карты
 
 |===
 
@@ -471,30 +478,33 @@ HTTP/1.1 200 OK
 
 ===== Параметры заголовков запросов
 |===
-| Параметр | Тип | Описание 
+| Параметр | Тип | Обязательность | По умолчанию | Описание 
 
 | customerId
 | String
-| Mandatory +
-Мнемоника пользователя и мнемоника местоположения
+| Mandatory
+| ---
+| Мнемоника пользователя и мнемоника местоположения
 
 
 | applicationId
 | String
-| Mandatory +
-ID приложения
+| Mandatory
+| ---
+| ID приложения
 
 |===
 
 
 ===== Параметры строки запроса
 |===
-| Параметр |  Тип | Описание 
+| Параметр | Тип | Обязательность | По умолчанию | Описание 
 
 | Id
 | String
-| Mandatory +
-ID карты
+| Mandatory
+| ---
+| ID карты
 
 |===
 
