--- a/cards.asciidoc
+++ b/cards.asciidoc
@@ -274,7 +274,7 @@ HTTP/1.1 200 OK
     },
     "bank": {
       "href": "http://.../banks/...",
-      "code": "0000001",
+      "id": "0000001",
       "name": "Альфа-Банк",
       "color": "#000007"
     }
@@ -301,7 +301,7 @@ HTTP/1.1 200 OK
     },
     "bank": {
       "href": "http://.../banks/...",
-      "code": "0000002",
+      "id": "0000002",
       "name": "Сбербанк",
       "color": "#000008"
     }
@@ -357,7 +357,7 @@ HTTP/1.1 200 OK
     },
     "bank": {
       "href": "http://.../banks/...",
-      "code": "0000001",
+      "id": "0000001",
       "name": "Альфа-Банк",
       "color": "#000007"
     }
@@ -384,7 +384,7 @@ HTTP/1.1 200 OK
     },
     "bank": {
       "href": "http://.../banks/...",
-      "code": "0000002",
+      "id": "0000002",
       "name": "Сбербанк",
       "color": "#000008"
     }
@@ -463,13 +463,13 @@ HTTP/1.1 200 OK
     "balance": "100050",
     "currency": {
       "href": "http://.../currency/...",
-      "code": "RUR",
+      "id": "RUR",
       "description": "Рубль"
     }
   },
   "bank": {
     "href": "http://.../banks/...",
-    "code": "0000001",
+    "id": "0000001",
     "name": "Альфа-Банк",
     "color": "#000007"
   }
